fix PhoneGap refresh

--- a/src/template/style.css
+++ b/src/template/style.css
@@ -2,6 +2,17 @@
  * Copyright 2015 Alexander Orlov <alexander.orlov@loxal.net>. All rights reserved.
  */
 
+div {
+    font-size: 2em;
+}
+
+button {
+    font-size: 1em;
+}
+
+input {
+}
+
 .options {
     list-style-type: none;
     margin-left: 1em;
@@ -10,14 +21,11 @@
 }
 
 .options li {
-    cursor: pointer;
-    position: relative;
-    left: 0;
     transition: all 0.2s ease;
 }
 
 .options li:hover {
     color: #369;
     background-color: #eee;
-    left: .1em;
+    border-radius: 1em;
 }
